correct footer wrap

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,13 @@
-.footer .footer__container {
-  box-shadow: 0px -4px 24px rgba(105, 105, 105, 0.1);
-  background-repeat: no-repeat;
+.footer {
+    max-width: 1280px;
+      margin: 0 auto;
+      padding: 60px 0;
+      background-color: #fefefe;
+      box-shadow: 0px -4px 24px rgba(105, 105, 105, 0.1);
+
+      background-repeat: no-repeat;
+      background-position: 0 132px, bottom, top right;
+      background-size: 110px 116px, 253px 66px, 104px 259px;
 
   @media screen and(max-width:480px) {
     padding-bottom: 60px;
@@ -50,24 +57,31 @@
       url(../images/footer/fbg6.jpg);
   }
 }
-
-.footer__join {
-  @media screen and(min-width: 1280px) {
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-}
-
 .footer__wrap {
-  display: flex;
 
-  @media screen and(min-width:768px) {
-    align-items: center;
-    margin-bottom: 40px;
+  @media screen and(min-width:1280px) {
+
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
   }
 }
+.footer__join {
+    display: flex;
+      gap: 81px;
+      margin-bottom: 40px;
+
+  @media screen and(min-width: 768px) {
+        gap: 114px;
+          align-items: center;
+  }
+  @media screen and(min-width: 1280px) {
+  gap: 145px;
+    align-self: flex-start;
+    margin-bottom: 0px;
+  }
+}
+
 
 .footer__logo {
   margin-right: 95px;
